<resources>
    <string name="app_name">MemesToText</string>
    <string name="help_name">Ayuda</string>
    <string name="about_name">Acerca de MemesToText</string>
    <string name="img_view">Contenedor del meme cargado</string>
    <string name="btnImage">Cargar meme</string>
    <string name="btnTranslate">Traducir meme</string>
    <string name="btn_upload_image">Cargar un meme de la galería</string>
    <string name="btn_upload_camera">Tomar una foto con la cámara y cargarla</string>
    <string name="btn_translate">Traducir el meme cargado</string>
    <string name="txt_view">Contenedor del resultado de la traducción del meme</string>
    <string name="homeItem">Inicio</string>
    <string name="helpItem">Ayuda</string>
    <string name="cdHome">Pantalla principal de la aplicación</string>
    <string name="cdHelp">Pantalla de ayuda de la aplicación</string>
    <string name="tabItemUploadImage">Cargar meme</string>
    <string name="tabItemTranslateMeme">Traducir meme</string>
    <string name="tabItemAppElements">Herramientas</string>
    <string name="toolsDescription">La pantalla principal contiene los siguientes elementos.</string>
    <string name="element1">1.-Menú desplegable que contiene dos opciones, una para ir al inicio de la aplicación y otra para ir a la pantalla de ayuda.</string>
    <string name="element2">2.-Contenedor del meme cargado, por defecto ya tiene un meme cargado para que pueda ser traducido.</string>
    <string name="element3">3.-Botón para cargar un meme de la galería.</string>
    <string name="element4">4.-Botón para traducir el meme cargado.</string>
    <string name="element5">5.-Contenedor de texto en dónde se asigna el resultado de la traducción del meme.</string>
    <string name="cmp">Pasos para poder cargar un meme.</string>
    <string name="cmp1">1.-Elige el botón de cargar meme.</string>
    <string name="cmp2">2.-La aplicación mandará un mensaje en dónde diga Seleccione la aplicación de galería.</string>
    <string name="cmp3">3.-Seleccionar la aplicación de galería.</string>
    <string name="cmp4">4.-Elegir el álbum en dónde se encuentran los memes.</string>
    <string name="cmp5">5.-Elegir el meme a traducir.</string>
    <string name="cmp6">6.-Si se cargó correctamente el meme se reproducirá un sonido que diga Se cargó correctamente la imagen y se añadirá el meme al contenedor del meme. Si por error se eligió un video al seleccionar el botón traducir meme se reproducirá un sonido de error que diga No se cargó correctamente la imagen, se traducirá el meme por defecto de la aplicación.</string>
    <string name="tmp">Pasos para poder traducir un meme.</string>
    <string name="tmp1">1.-Asegurarse de que el teléfono cuenta con conexión a internet.</string>
    <string name="tmp2">2.-Asegurarse de que se cargó el meme a traducir, si no la aplicación traducirá el meme por defecto de la aplicación o si se ingresó otro tipo de archivo mandará un sonido que diga No se cargó correctamente la imagen, se traducirá el meme por defecto de la aplicación.</string>
    <string name="tmp3">3.-Elegir el botón de traducir el meme cargado.</string>
    <string name="tmp4">4.-La aplicación reproducirá un sonido que diga traduciendo la imagen y despues reproducirá un sonido de espera.</string>
    <string name="tmp5">5.-Si se detectó que el meme tiene texto incrustado se reproducirá un sonido que diga que se detectó texto en la imagen y si no dirá que no se detectó texto en la imagen.</string>
    <string name="tmp6">6.-Si se detectó el contexto del meme se reproducirá un sonido que diga que se detectó el contexto del meme y si no dirá que no se detectó el contexto del meme.</string>
    <string name="tmp7">7.-Si se encontrarón resultados la aplicación reproducirá un sonido que diga que se obtuvo el resultado de la traducción y si no dirá que no se obtuvo resultado de la traducción.</string>
    <string name="helpTools">Descripción sobre las herramientas de la aplicación</string>
    <string name="helpUploadImage">Descripción sobre cómo cargar un meme</string>
    <string name="helpTransalate">Descripción sobre cómo traducir el meme cargado</string>
    <string name="aboutText">MemesToText es una aplicación para traducir memes a personas con discapacidad visual.</string>
    <string name="colaborators">Colaboradores.</string>
    <string name="projectDirector">Director del proyecto: Dr.José Rafael Rojano Cáceres Director del Laboratorio de Inclusión y Accesibilidad y Maestro de Tecnologías Computacionales de la Facultad de Estadística e Informática de la Universidad Veracruzana.</string>
    <string name="betaTester">Beta tester: Alejandro Iván Castro Orozco Maestro en Educación Especial de la Benemérita Escuela Normal Veracruzana.</string>
    <string name="developer">Desarrollador: Luis Pablo Reyes Fernández estudiante de Tecnologías Computacionales de la Facultad de Estadística e Informática de la Universidad Veracruzana.</string>
    <string name="contact">Contacto.</string>
    <string name="contactEmail">Correo electronico: lpanonymous0101@gmail.com.</string>
    <string name="contactCel">Cel: +52 22 82 22 62 04.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
